Añadida información sobre configuración de Maven
git-svn-id: http://scmcit.gva.es/svn/gvnix/trunk/code@178 69435866-3869-0410-973d-9f951a852354